fixing button on mobile

--- a/style.css
+++ b/style.css
@@ -350,7 +350,7 @@ button:hover {
   .contact-button {
     margin-top: 10%;
     width: 25%;
-    height: 50%;
+    height: 100%;
     background-color: white;
     color: #8c52ff;
   }
